refactor: マイクのinitを移動

--- a/platformio.ini
+++ b/platformio.ini
@@ -63,8 +63,8 @@ lib_ldf_mode = deep
 ; monitor_port = ${env.upload_port}
 
 [build-target]
-extends = release
-; extends = debug
+; extends = release
+extends = debug
 
 [release]
 build_type = release
