--- a/platformio.ini
+++ b/platformio.ini
@@ -46,6 +46,10 @@ default_envs = m5stack-cores3-m5unified
 
 extra_configs = platformio-m5stack.ini
 
+src_dir = firmware/src
+include_dir = firmware/include
+lib_dir = firmware/lib
+
 [env]
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder, time
