--- a/platformio.ini
+++ b/platformio.ini
@@ -63,6 +63,10 @@ lib_deps =
 
 lib_ldf_mode = deep
 
+# For ESP-SR
+board_build.partitions = misc/ESP_SR/partitions_esp_sr_16.csv
+extra_scripts = misc/ESP_SR/flash_srmodels.py
+
 ; upload_port = COM16
 ; monitor_port = ${env.upload_port}
 
