--- a/platformio-m5stack.ini
+++ b/platformio-m5stack.ini
@@ -16,7 +16,7 @@ board_build.flash_mode = dio
 # Platform
 # ---------------------------------------------------------
 [platform-pioarduino]
-platform = https://github.com/pioarduino/platform-espressif32.git#55.03.32
+platform = https://github.com/pioarduino/platform-espressif32.git#55.03.36
 platform_packages =
 
 # ---------------------------------------------------------
@@ -77,6 +77,7 @@ lib_deps =
 # ---------------------------------------------------------
 
 [esp32s3]
+extends = platform-pioarduino
 board_build.mcu = esp32s3
 board_build.arduino.memory_type = qio_qspi
 build_flags = -DARDUINO_USB_CDC_ON_BOOT
