おしゃべりするところまで動いた

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi[websockets]>=0.128.0",
     "google-cloud-speech>=2.35.0",
+    "google-genai>=1.59.0",
     "uvicorn[standard]>=0.40.0",
     "voicevox-client>=1.1.0",
 ]
