--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["hatchling>=1.25.0"]
+build-backend = "hatchling.build"
+
 [project]
 name = "websocket-control-stackchan-server"
 version = "0.1.0"
@@ -15,4 +19,14 @@ dependencies = [
 [dependency-groups]
 sample-gemini = [
     "google-genai>=1.59.0",
+]
+
+[tool.hatch.build.targets.wheel]
+packages = ["stackchan_server"]
+
+[tool.hatch.build.targets.sdist]
+include = [
+    "pyproject.toml",
+    "README.md",
+    "stackchan_server/**",
 ]
