--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ dev = [
 example-gemini = [
     "google-genai>=1.59.0",
 ]
+example-claude-agent-sdk = [
+    "claude-agent-sdk>=0.1.39",
+]
 
 [tool.ruff]
 target-version = "py313"
