--- a/.github/workflows/pr-lint-typecheck.yml
+++ b/.github/workflows/pr-lint-typecheck.yml
@@ -1,6 +1,15 @@
 name: PR Lint and Type Check
 
 on:
+  push:
+    branches:
+      - main
+    paths:
+      - ".github/workflows/pr-lint-typecheck.yml"
+      - "pyproject.toml"
+      - "uv.lock"
+      - "stackchan_server/**"
+      - "example_apps/**"
   pull_request:
     paths:
       - ".github/workflows/pr-lint-typecheck.yml"
@@ -26,7 +35,7 @@ jobs:
           python-version: "3.13"
 
       - name: Install dependencies
-        run: uv sync --group dev --group example-gemini --frozen
+        run: uv sync --all-groups --frozen
 
       - name: Ruff
         run: uv run ruff check stackchan_server example_apps
